--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     max-width: 100vw;
     background-image: url(images/gradient4.jpg);
     /* backdrop-filter: blur(100px); */
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
     font-family: 'Montserrat';
