--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     background-image: url(images/gradient4.jpg);
     /* backdrop-filter: blur(100px); */
     background-repeat: repeat;
-    background-size: 100% 100%;
+/*     background-size: 100% 100%; */
     background-attachment: fixed;
     font-family: 'Montserrat';
 
