--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@
 }
 
 .body {
-    max-width: 100vw;
+   max-width: 100vw;
     background-image: url(images/gradient4.jpg);
     /* backdrop-filter: blur(100px); */
-    background-repeat: repeat;
-/*     background-size: 100% 100%; */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     background-attachment: fixed;
     font-family: 'Montserrat';
 
