--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     background-image: url(images/gradient4.jpg);
     /* backdrop-filter: blur(100px); */
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100vw 120vh;
     background-position: center center;
     background-attachment: fixed;
     font-family: 'Montserrat';
