--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,14 @@
     --main-text-color: black;
 }
 
-.body {
+body {
     margin: 0px;
     max-width: 100wh;
     min-height: 100vh;
     background-image: url(images/gradient4.jpg);
     /* backdrop-filter: blur(100px); */
-    background-repeat: no-repeat;
-    background-size: 100vw 120vh;
+    background-repeat: repeat;
+    background-size: 100% 100%;
     background-attachment: fixed;
     font-family: 'Montserrat';
 
