--- a/styles.css
+++ b/styles.css
@@ -10,13 +10,13 @@
 }
 
 .body {
-    margin: 0px;
-    max-width: 100wh;
-    min-height: 100vh;
-    background-image: url(images/gradient4.jpg);
+     margin: 0px;
+    max-width: 100vw;
+    min-height: 100vh;  
+    background-image: linear-gradient(45deg,#f0e1f6,#d2dffe,#ccdfff);
     /* backdrop-filter: blur(100px); */
-    background-repeat: repeat;
-    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    /* background-size: 100vw 100vh; */
     background-attachment: fixed;
     font-family: 'Montserrat';
 
