--- a/css/style.css
+++ b/css/style.css
@@ -236,9 +236,9 @@ body {
   cursor: pointer;
 }
 
-#nav h1:hover {
+/* #nav h1:hover {
   scale: 1.2;
-}
+} */
 
 #nav ion-icon {
   font-size: 1.3rem;
