--- a/css/media500.css
+++ b/css/media500.css
@@ -93,11 +93,21 @@
     font-size: 0.7rem;
   }
 
-  .project-card-container {
+  /* #project-content .project-card-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem; 
+    width: 80%; 
+    margin: 2rem auto; 
+    align-items: center;
+  } */
+
+  #project-content .project-card-container {
     display: flex;
     width: 100%;
     padding: 0 0 0 12vw;
     overflow: auto;
+    height: 25rem;
     align-items: center;
     scroll-snap-type: x mandatory;
   }
@@ -106,13 +116,18 @@
     display: flex;
     flex-direction: column;
     scroll-snap-align: center;
-    align-items: center;
     border: solid 1px var(--border-color);
     border-radius: 2rem;
     padding: 2rem 2.5rem;
     margin-top: 0;
     margin-right: 1.5rem;
-    width: 90%;
+    width: 100%;
+    height: 100%;
+  }
+
+  .project-card h2 {
+    font-size: 2rem;
+    width: 12rem;
   }
 
   #project-content .project-card:last-child {
